# django_lowcoder

./: .gitignore  .pre-commit-config.yaml  README.md  bundle_cookiecutter_django.sh  generate_requirements.sh  manage.py  pyproject.toml  requirements.txt
django_lowcoder/: admin.py  asgi.py  settings.py  urls.py  wsgi.py
initial_data/: add_initial_data_for_programming_languages_and_templates.py  code_template_parameters.csv  code_templates.csv  programming_languages.csv
initial_data/json/: project_codetemplate.json  project_codetemplateparameter.json  project_programminglanguage.json
project/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
project/fixtures/: project_codetemplate.json  project_codetemplateparameter.json  project_programminglanguage.json
project/forms/: forms_project.py  forms_registration.py
project/migrations/: 0001_initial.py  0001_squashed_0008_remove_model_project_and_more.py  0002_remove_modelfield_is_primary_key_and_more.py  0003_alter_model_options_alter_modelfield_options_and_more.py  0004_model_project.py  0005_alter_projectsettings_admin_password_and_more.py  0006_alter_projectsettings_admin_password_and_more.py  0007_alter_projectsettings_admin_name_and_more.py  0008_remove_model_project_and_more.py  0009_alter_model_is_main_entity_alter_project_description_and_more.py  0010_alter_model_transformation_mapping_and_more.py  0011_rename_modelfield_field_and_more.py  0012_remove_field_foreign_key_id_and_more.py  0013_alter_field_datatype_length_and_more.py  0014_alter_field_datatype_alter_field_datatype_length_and_more.py  0015_remove_field_is_foreign_key_and_more.py  0016_alter_field_is_unique_and_more.py  0017_field_created_at_field_updated_at_model_created_at_and_more.py  0018_remove_transformationfile_file_path_and_more.py  0019_alter_model_transformation_headline_and_more.py  0020_alter_field_datatype_alter_field_foreign_key_entity_and_more.py  0021_alter_projectsettings_admin_password_and_more.py  0022_alter_projectsettings_admin_password_and_more.py  0023_alter_projectsettings_admin_password_and_more.py  0024_alter_field_datatype_and_more.py  0025_alter_model_transformation_headline_and_more.py  0026_alter_projectsettings_admin_password.py  0027_alter_projectsettings_admin_password.py  0028_alter_transformationcolumn_options_and_more.py  0029_alter_transformationfile_options_and_more.py  0030_alter_field_options_alter_model_options_and_more.py  0031_alter_model_transformation_headline_and_more.py  0032_alter_projectsettings_admin_password_and_more.py  0033_field_exclude_field_show_in_detail_model_exclude_and_more.py  0034_rename_datatype_length_field_max_length_field_blank_and_more.py  0035_model_description_alter_model_exclude_and_more.py  0036_field_description_alter_model_description_and_more.py  0037_alter_field_choices_alter_field_datatype_and_more.py  0038_programminglanguage_and_more.py  0039_alter_field_options_alter_model_options_and_more.py  (+14 more)
project/services/: code_template_mapper.py  cookiecutter_template_expander.py  cookiecutter_templete_expander.py  deploytype.py  edit_model.py  edit_project.py  import_field.py  import_file.py  importer.py  model_exporter.py  model_exporter_django.py  (+2 more)
(+41 files in other folders)
