[tool.poetry]
name = "django_lowcoder"
version = "0.1.0"
description = "Web application to generate crud web applications out ofexcel spreadsheets"
authors = ["Henry Jobst <github@jobst-berlin.de>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.4"
django-crispy-forms = "^1.14.0"
crispy-bootstrap5 = "^0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
